# negadice

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: set-version.mjs  stage-artifacts.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/app/: app-sidebar.tsx  preview-pane.tsx
src/components/ui/: select.tsx  slider.tsx
src/hooks/: use-file-dropzone.ts  use-image-files.ts
src/lib/: canvas.ts  exif.ts  file-acceptance.ts  output.ts
